--- a/Appli/env/pyvenv.cfg
+++ b/Appli/env/pyvenv.cfg
@@ -1,3 +1,8 @@
-home = C:\Users\adele\anaconda3
+home = C:\Users\adele\AppData\Local\Programs\Python\Python312
+implementation = CPython
+version_info = 3.12.4.final.0
+virtualenv = 20.26.3
 include-system-site-packages = false
-version = 3.8.19
+base-prefix = C:\Users\adele\AppData\Local\Programs\Python\Python312
+base-exec-prefix = C:\Users\adele\AppData\Local\Programs\Python\Python312
+base-executable = C:\Users\adele\AppData\Local\Programs\Python\Python312\python.exe
